tests/fixtures/negative/numeric_literals/001_separator_leading.js
// Expected error: invalid numeric separator placement before the decimal point.
const value = 1_.0;
